# userspace-switch2

./: .gitmodules  CMakeLists.txt
.cache/clangd/index/: core.c.4A437DD2F059E8FE.idx  descriptor.c.67FC12B2D5BC7585.idx  events_posix.c.8D561B20188F1551.idx  events_posix.h.FC1CB5E7A9E74725.idx  hid.c.CFD6E383195EF53C.idx  hid.c.E4B26785D26C7D3C.idx  hidapi.h.051BEFD59CAD1DA3.idx  hidapi_libusb.h.4ED3FF4238DA82D7.idx  hidapi_thread_pthread.h.F852893514EEE6BB.idx  hotplug.c.0D39E5C736BB12D5.idx  io.c.2B381EFC01821265.idx  libusb.h.61D742A03597C240.idx  libusbi.h.C1909C1520FAEBA7.idx  linux_udev.c.E23ED4A301D7244E.idx  linux_usbfs.c.5174E8B1B901F49C.idx  linux_usbfs.h.E072E4192AC4848E.idx  main.c.94795DCE80433CF8.idx  main.h.D0DE798B156A008B.idx  strerror.c.2B0F58327CC33CB6.idx  sync.c.72471C46DA3EE47B.idx  threads_posix.c.7237BD199CBC3ECE.idx  threads_posix.h.741AB5F6FD48CA0A.idx  version.h.966855729D47D056.idx  version_nano.h.9D4DCB7B854577A1.idx
include/: main.h  ringbuffer.h
src/: main.c  ringbuffer.c
